Suivi des principales révisions 

AVERTISSEMENT : la version 0.6, bien que parfaitement fonctionnelle, n'intègre pas d'initialisation automatique d'un site

ACS version 0.7
 - changement des chemins d'images installées par les composants : img->IMG
 - affichage du commentaire du composant en info-bulle sur le schéma de la page
 
Modele Cat pour ACS vesion 0.7:
 - en cours de mise à jour : les composants sont encore en version 0.6 

_______________________________________
ACS version 0.6
 - mise à jour pour spip 2.1 et JQuery 1.8
 - drag/drop de composants sur le site public, avec les pinceaux ACS.
 - mutualisation
 - update pour JQuery 1.8 (spip 2.1)
 - ajout à l'API de la lecture de variables ACS avec chemins, style API cfg (acs/params/DernereModif)
 - API : changement de structure du tableau retourné par composants_liste()
 - instanciation/suppression de composants depuis l'interface d'administration (avant, ça ne se faisait que par  inclusion dans les squelettes)
 - classComposantPrive.php : propriété "type" remplacé par "class" dans le constructeur (c'est plus cohérent)
 - détection des composants instanciables (paramètre instanciable définie dans le xml du composant)
 - lib/composant_infos : indique correctement les inclusions dans des composants Modules
 - exec/composant_get_infos : correction d'un bug de cGetPages() pour les composants sans numéro d'instance
 - lib/composant/page_source : affichage du contenu des variables de type widget dans le schéma de page
 - balise #VAR : gère à la fois l'héritage de propriétés de composants ACS et la lecture de "chemins" type cfg y compris pour les modules.
 - vues/composant : prise en compte des styles d'instances e composant
 
Modele Cat pour ACS vesion 0.6:
 - pages du squelette : transformation de toutes les pages en pages constituées de composants Modules (partiellement réalisé : reste à définir un fichier dinitialisation adéquat. Ce sera fait dans la version 0.7)