@@ -4,7 +4,7 @@
          Squelette Cat
     http://acs.geomaticien.org
 
-Copyright Daniel FAIVRE, 2007-2009
+Copyright Daniel FAIVRE, 2007-2010
 Copyleft: licence GPL - Cf. LICENCES.txt in acs plugin dir
 
 ][(#CONFIG{langues_utilisees}|detecte_langue{#SELF})][(#VAR{acsArticlesLock}|=={oui}|?{' '}) <INCLUDE{fond=composants/articles/inc-article_acces}{{env=#ENV}id_article}{self=#SELF}{ouvrir}{debut_doc}{debut_breves}{debut_forums}>][(#VAR{acsArticlesLock}|!={oui}|?{' '}) <INCLUDE{fond=inc-article}{id_article}{self=#SELF}{env=#ENV}{ouvrir}{debut_doc}{debut_breves}{debut_forums}>]
