@@ -1,0 +1,28 @@
+<?php
+  $keywords = array(
+  	'_Restricted' => array(
+      'descriptif' => 'Restricted access (must be activated in the "articles" component).',
+      'texte' => '',
+      'unseul' => 'non',
+      'obligatoire' => 'non',
+      'tables_liees' => 'articles',
+      'minirezo' => 'oui',
+      'comite' => 'non',
+      'forum' => 'non',
+      'mots' => array(
+        '_adm' => array(
+          'descriptif' => 'Administrators',
+          'texte' => ''
+          ),
+        '_aut' => array(
+          'descriptif' => 'Authors',
+          'texte' => ''
+          ),
+        '_ide' = > array(
+          'descriptif' => 'Registered visitors',
+          'texte' => ''
+          )
+        )
+      )
+  );
+?>
