@@ -1,0 +1,28 @@
+<?php
+  $keywords = array(
+  	'_Accès restreint' => array(
+      'descriptif' => 'Restriction d\'accès (la fonction doit être activée dans le composant "articles").',
+      'texte' => '',
+      'unseul' => 'non',
+      'obligatoire' => 'non',
+      'tables_liees' => 'articles',
+      'minirezo' => 'oui',
+      'comite' => 'non',
+      'forum' => 'non',
+      'mots' => array(
+        '_adm' => array(
+          'descriptif' => 'Administrateurs',
+          'texte' => ''
+          ),
+        '_aut' => array(
+          'descriptif' => 'Rédacteurs',
+          'texte' => ''
+          ),
+        '_ide' => array(
+          'descriptif' => 'Visiteurs enregistrés',
+          'texte' => ''
+          )
+        )
+      )
+  );
+?>
