@@ -1,0 +1,20 @@
+<?php
+  $keywords = array(
+    '_Type d\'article' => array(
+      'descriptif' => 'Type d\'article',
+      'texte' => '',
+      'unseul' => 'non',
+      'obligatoire' => 'non',
+      'tables_liees' => 'articles',
+      'minirezo' => 'oui',
+      'comite' => 'non',
+      'forum' => 'non',
+      'mots' => array(
+        '_Edito' => array(
+          'descriptif' => 'Editorial',
+          'texte' => ''
+          )
+        )
+      )
+  );
+?>
