@@ -1,0 +1,20 @@
+<?php
+  $keywords = array(
+    '_Article type' => array(
+      'descriptif' => 'Article type',
+      'texte' => '',
+      'unseul' => 'non',
+      'obligatoire' => 'non',
+      'tables_liees' => 'articles',
+      'minirezo' => 'oui',
+      'comite' => 'non',
+      'forum' => 'non',
+      'mots' => array(
+        '_Encart' => array(
+          'descriptif' => 'Insert',
+          'texte' => ''
+          )
+        )
+      )
+  );
+?>
