@@ -1,0 +1,48 @@
+<?php
+  $keywords = array(
+    '_Category' => array(
+      'descriptif' => '',
+      'texte' => '',
+      'unseul' => 'oui',
+      'obligatoire' => 'non',
+      'tables_liees' => 'rubriques',
+      'minirezo' => 'oui',
+      'comite' => 'non',
+      'forum' => 'non',
+      'mots' => array(
+        '_Group1' => array(
+          'descriptif' => 'Category group 1',
+          'texte' => ''
+          ),
+        '_Group2' => array(
+          'descriptif' => 'Category group 2',
+          'texte' => ''
+          ),
+        '_Group3' => array(
+          'descriptif' => 'Category group 3',
+          'texte' => ''
+          ),
+        '_Ours' => array(
+          'descriptif' => 'Legal informations',
+          'texte' => 'Legal informations'
+          )
+        )
+      ),
+    '_Storage' => array(
+      'descriptif' => '',
+      'texte' => '',
+      'unseul' => 'oui',
+      'obligatoire' => 'non',
+      'tables_liees' => 'rubriques',
+      'minirezo' => 'oui',
+      'comite' => 'non',
+      'forum' => 'non',
+      'mots' => array(
+        '_Archive' => array(
+          'descriptif' => 'Archive',
+          'texte' => 'Archives'
+          )
+        )
+    )
+  );
+?>
