@@ -1,0 +1,48 @@
+<?php
+	$keywords = array(
+		'_Type de rubrique' => array(
+    	'descriptif' => '',
+    	'texte' => '',
+    	'unseul' => 'oui',
+    	'obligatoire' => 'non',
+    	'tables_liees' => 'rubriques',
+  		'minirezo' => 'oui',
+  		'comite' => 'non',
+  		'forum' => 'non',
+    	'mots' => array(
+    		'_Group1' => array(
+    			'descriptif' => 'Rubrique du groupe 1',
+    			'texte' => ''
+    			),
+    		'_Group2' => array(
+    			'descriptif' => 'Rubrique du groupe 2',
+    			'texte' => ''
+    			),
+    		'_Group3' => array(
+    			'descriptif' => 'Rubrique du groupe 3',
+    			'texte' => ''
+    			),
+    		'_Ours' => array(
+    			'descriptif' => 'Informations légales',
+    			'texte' => 'Informations légales'
+    			)
+    		)
+    	),
+		'_Archivage' => array(
+    	'descriptif' => '',
+    	'texte' => '',
+    	'unseul' => 'oui',
+    	'obligatoire' => 'non',
+    	'tables_liees' => 'rubriques',
+  		'minirezo' => 'oui',
+  		'comite' => 'non',
+  		'forum' => 'non',
+    	'mots' => array(
+    		'_Archive' => array(
+    			'descriptif' => 'Rubrique archivée',
+    			'texte' => 'Archives'
+    			)
+    		)
+  	)
+	);
+?>
